# KnowledgeHub-AI

./: .dockerignore  .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_create_users.py  0003_create_documents.py  0004_document_processing.py  0005_chunk_embedding_metadata.py  0006_conversations.py  0007_release_indexes.py
app/: __init__.py  dependencies.py  main.py
app/api/: errors.py
app/application/: __init__.py  chunking.py  embedding.py  extraction.py  history.py  llm.py  prompting.py  rag.py  reconciliation.py  retrieval.py  vector_store.py
app/cli/: __init__.py  reconcile.py
app/core/: __init__.py  config.py  logging.py  metrics.py  middleware.py  rate_limit.py  security.py
app/infrastructure/: __init__.py
docker/nginx/: Dockerfile  nginx.conf
docs/: dependency-audit.md  runbook.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: journey.spec.ts  real-backend.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
tests/: conftest.py  test_auth.py  test_conversations.py  test_documents.py  test_embeddings.py  test_hardening.py  test_processing.py  test_rag.py  test_rag_integration.py  test_search.py  test_system_endpoints.py  test_vector_persistence.py
(+56 files in other folders)
