[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-rag-assistant"
version = "0.3.0"
description = "Enterprise-ready RAG platform foundation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Enterprise-RAG-Assistant contributors" }]
dependencies = [
    "alembic>=1.14,<2.0",
    "argon2-cffi>=23.1,<26.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.6,<3.0",
    "PyJWT>=2.10,<3.0",
    "python-json-logger>=3.2,<4.0",
    "python-multipart>=0.0.18,<1.0",
    "pypdf>=5.0,<7.0",
    "pymilvus>=2.5,<2.7",
    "python-docx>=1.1,<2.0",
    "redis>=5.2,<6.0",
    "sentence-transformers>=5.0,<6.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires external infrastructure such as Milvus"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
